# jse-2

./: CMakeLists.txt  win-configure.bat
assets/: cube.blend  cube.gltf  test2.gltf
assets/shaders/: depth.fs.glsl  depth.vs.glsl  uniforms.inc  uniforms.inc.glsl  vertex.inc  vertex.inc.glsl
demo/: demo.cpp
jse/core/: Core.hpp  Types.hpp
jse/core/io/: Filesystem.cpp  Filesystem.hpp  Logger.cpp  Logger.hpp  MemoryBuffer.hpp
jse/core/math/: Frustum.hpp  Interp.hpp  Matrix.hpp  Plane.hpp  Vector.hpp
jse/core/sys/: Heap.cpp  Heap.hpp  Types.hpp
jse/graphics/: BufferObject.hpp  Camera.hpp  DrawLight.hpp  DrawVert.hpp  Graphics3D.cpp  Graphics3D.hpp  GraphicsTypes.hpp  Image.cpp  Image.hpp  Light.hpp  Material.hpp  Renderer.hpp  ShaderProgram.hpp  VertexArrayObject.hpp
jse/graphics/OpenGL/: ArrayBufferObject_GL.cpp  ElementBufferObject_GL.cpp  Graphics3D_GL.cpp  Graphics3D_GL.hpp  Image_GL.cpp  ShaderProgram_GL.cpp  UniformBufferObject_GL.cpp  VertexArrayObject_GL.cpp  common_GL.hpp
jse/graphics/renderer/: RenderContext.hpp  RenderResourceContext.hpp  RenderResoure.hpp
jse/input/: InputService.cpp  InputService.hpp  InputTypes.hpp
jse/input/SDL/: InputServiceSDL.cpp  InputServiceSDL.hpp
jse/scene/: Mesh.cpp  Mesh.hpp  MeshGroup.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
